--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,10 @@ dependencies {
 
     compile "com.jakewharton:butterknife:${BUTTERKNIFE_VERSION}"
     apt "com.jakewharton:butterknife-compiler:${BUTTERKNIFE_VERSION}"
+
+    //Goggle AutoValue
+    provided 'com.google.auto.value:auto-value:1.3'
+    apt 'com.google.auto.value:auto-value:1.3'
+    apt 'com.ryanharter.auto.value:auto-value-parcel:0.2.5'
+
 }
