--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ android {
 }
 
 final BUTTERKNIFE_VERSION = '8.4.0'
+final ICEPICK_VERSION = '3.2.0'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -34,5 +35,9 @@ dependencies {
     provided 'com.google.auto.value:auto-value:1.3'
     apt 'com.google.auto.value:auto-value:1.3'
     apt 'com.ryanharter.auto.value:auto-value-parcel:0.2.5'
+
+    // Icepick
+    compile "frankiesardo:icepick:${ICEPICK_VERSION}"
+    provided "frankiesardo:icepick-processor:${ICEPICK_VERSION}"
 
 }
